--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>The man who saved billion of lives</p>
 </header>
 <section class="tribute-img">
-    <img src="/tribute-image.jpg" alt="">
+    <img src="tribute-image.jpg" alt="">
     <p>Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of
         his life-long war on hunger.</p>
 </section>
